src/test/deca/codegen/valid/overflow_sub_float.deca
// @result -10000000000
/*
    Description : Test sur la gestion de l'overflow sur la soustraction de float

    Résultat : à définir...

*/
{
    println(-5000000000.5-5000000000.1);
    //println("Test reussi : -10000000000");
}
